--- a/mgp.html
+++ b/mgp.html
@@ -46,7 +46,7 @@
                     
                     
             </p>
-            <img src="images/airbnb.jpg" alt="web" width="480px">
+            <img src="images/airbnb.JPG" alt="web" width="480px">
             <p><a href="https://www.airbnb.co.uk/host/homes?from_nav=1">Airbnb</a>
 
             </p>
