--- a/mgp.html
+++ b/mgp.html
@@ -50,7 +50,7 @@
             <p><a href="https://www.airbnb.co.uk/host/homes?from_nav=1">Airbnb</a>
 
             </p>
-            <img src="images/dropbox.jpg" alt="web" width="480px">
+            <img src="images/dropbox.JPG" alt="web" width="480px">
             <p><a href="https://www.dropbox.com/en_GB/?landing=dbv2">Dropbox</a>
 
             </p>
