--- a/evaluation.html
+++ b/evaluation.html
@@ -49,10 +49,10 @@
             <img src="images/wireframe1.jpg" alt="web" width="480px"><p>
                 A wireframe I designed before starting the assignment, figuring out how I will structure my website
             </p>
-            <img src="images/validation1.jpg" alt="web" width="480px"><p>
+            <img src="images/validation1.JPG" alt="web" width="480px"><p>
               As you can see this is what the website would look like if it was on a 1920 x 1080 display, i used the inspect element tool on chrome to check this.  
             </p>    
-            <img src="images/validation2.jpg" alt="web" width="480px"><p>
+            <img src="images/validation2.JPG" alt="web" width="480px"><p>
              Using the Inspect Element tool i then checked what the website will look like if it was on a mobile phone, as you can see the layout is still good as users can scroll up or down and nothing is distorted or ruined.
 
             </p>
